branching off to fix carousel on mobile and safari

--- a/src/main/resources/static/assets/css/index.css
+++ b/src/main/resources/static/assets/css/index.css
@@ -38,7 +38,7 @@
 .carousel {
     padding: 20px;
 
-    perspective: var(--viewer-distance);
+    perspective: 500px;
     overflow: hidden;
 
     display: flex;
